--- a/src/common/i18n/common.nb.json
+++ b/src/common/i18n/common.nb.json
@@ -1,7 +1,7 @@
 {
     "locale.nb": "Bokmål - norsk",
     "locale.nn": "Nynorsk - norsk",
-    "locale.en": "Engelsk",
+    "locale.en": "English",
     "locale.no-NB": "Bokmål - norsk",
     "locale.no-NN": "Nynorsk - norsk"
 }
