--- a/src/common/i18n/common.nn.json
+++ b/src/common/i18n/common.nn.json
@@ -3,5 +3,17 @@
     "locale.nn": "Nynorsk - norsk",
     "locale.en": "English",
     "locale.no-NB": "Bokmål - norsk",
-    "locale.no-NN": "Nynorsk - norsk"
+    "locale.no-NN": "Nynorsk - norsk",
+    "page.defaultMainRoleLabel": "Hovudinnhald",
+    "backlink.label": "Tilbake",
+    "avbrytSøknadDialog.avbrytSøknadLabel": "Ja, avbryt søknad",
+    "avbrytSøknadDialog.fortsettSøknadLabel": "Nei",
+    "avbrytSøknadDialog.intro": "Det du har fylt ut i søknaden blir slettet, og du kommer tilbake til velkomstsiden.",
+    "avbrytSøknadDialog.spørsmål": "Ønsker du å slette søknaden?",
+    "avbrytSøknadDialog.tittel": "Avbryt og slett søknad",
+    "fortsettSøknadSenereDialog.avbrytSøknadLabel": "Ja, fortsett senere",
+    "fortsettSøknadSenereDialog.fortsettSøknadLabel": "Nei",
+    "fortsettSøknadSenereDialog.intro": "Vi lagrer søknaden din for deg i 24 timer.",
+    "fortsettSøknadSenereDialog.spørsmål": "Vil du avslutte nå og fortsette senere?",
+    "fortsettSøknadSenereDialog.tittel": "Avslutt og fortsett senere"
 }
