--- a/src/common/i18n/common.en.json
+++ b/src/common/i18n/common.en.json
@@ -34,6 +34,6 @@
     "psg.icon.label.keystone": "Picture is taken from above",
     "psg.icon.label.horizontal": "The picture has incorrect alignment",
     "psg.icon.label.shadow": "The picture contains a shadow",
-    "psg.lenkepanel.url": "https://www.nav.no/no/nav-og-samfunn/kontakt-nav/relatert-informasjon/ta-bilde-av-vedleggene-med-mobilen",
+    "psg.lenkepanel.url": "https://www.nav.no/brukerstotte#bilde-vedlegg",
     "psg.lenkepanel.text": "More help on how to upload an attachment (is opened in a new window)."
 }
